   * Maintain cursor position during unbreak/break
   * Fix for "disable auto open" of video files - thx Barneyk
   * Fix for rare large font issue - thx Camille
   * Fix for PAC language auto-detect - thx SirEllert
   * Remove colon now leaves first letter in uppercase - thx aucforum
   * Fix ASS font tag with space - thx OmarSi
   * Fix possible crash in expand ocr match - thx Zoltán


3.5.3 (12th May 2017)
* NEW:
   * New Netflix quality checker - thx askolesov/pavel-belenko
   * Added optional list view column "Actor" for ASS/SSA - thx william
   * Added new subtitle format - thx Merwyn
   * Added new subtitle format - thx Philippe
   * Added new subtitle fomrat - thx Eddy
* IMPROVED:
   * Updated Chinese translation - thx Leon
   * Updated French translation - thx JM GBT
   * Updated Russian translation - thx Elheym
   * Updated Finnish translation - thx Teijo S.
   * Updated Polish translation - thx admas
   * Import plain text now also supports input as HTML
   * Added "Total words" to statistics - thx Barbara
   * Added more Tesseract dictionaries - thx lucybook/Elheym
   * Added "Video auto-load" to UI settings - thx mtarini
   * "names_etc.xml" renamed to "names.xml" + local dictionaries
     now has a "blacklist" - thx ivandrofly
   * Some position support for WebVTT
   * In "Change casing" it's now possible to add extra names
   * Export image margins are now percentage - thx aaaxx/gorgorias
   * Added "Clear shortcut" button to settings - thx Simon
   * "Import plain text" now rembembers options - thx Leon
   * "Insert subtitle here..." added to waveform context menu
   * Added waveform shortcut for go to next sub - thx GeorgeM
   * Drag'n'drop of subtitles now allows up to 10 MB - thx Silvena
* FIXED:
   * Fixed crash in "Add to user dictionary" in OCR - thx alfix0
   * Fixed original file name bug in "Undo" - thx darnn
   * Fixed non default timecode scales in MKV - thx mkver
   * Fix layout of translator mode in RTL mode - thx darnn