@@ -633,6 +633,7 @@ namespace Nikse.SubtitleEdit.Logic
             AddExtension(sb, ".dost");
             AddExtension(sb, new Ayato().Extension);
             AddExtension(sb, new PacUnicode().Extension);
+            AddExtension(sb, new WinCaps32().Extension);
 
             if (!string.IsNullOrEmpty(Configuration.Settings.General.OpenSubtitleExtraExtensions))
             {
