@@ -34,6 +34,7 @@
    * Remove colon now leaves first letter in uppercase - thx aucforum
    * Fix ASS font tag with space - thx OmarSi
    * Fix possible crash in expand ocr match - thx Zoltán
+   * Allow for large unknown subtitle formats - thx Stefania
 
 
 3.5.3 (12th May 2017)
